--- a/example/index.html
+++ b/example/index.html
@@ -6,7 +6,7 @@
   <body>
     <script src="jquery.min.js"></script>
     <script src="pixi.min.js"></script>
-    <script src="../dist/pixi-svg-graphics.js"></script>
+    <script src="../dist/pixi-svg-graphics.min.js"></script>
     <script src="application.js"></script>
   </body>
 </html>
